src/test/ui/traits/trait-bounds-sugar.stderr
error[E0308]: mismatched types
  --> $DIR/trait-bounds-sugar.rs:12:7
   |
LL |     a(x);
   |       ^ expected trait `Foo + Send`, found trait `Foo + Sync`
   |
   = note: expected type `Box<(dyn Foo + Send + 'static)>`
              found type `Box<(dyn Foo + Sync + 'static)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
